# a8s-agents-go

./: .gitignore  LICENSE  README.md  a8s.conf.example  a8s_llm.conf.example  agents.a8s.example  agents.go  agents_loader.go  app.go  architecture.md  capability.go  capability_matcher.go  conf_loader.go  dapr.yaml  diff.txt  executor.go  go.mod  go.sum  main.go  metrics.go  pubsub.go  pyproject.toml  router.go  schema.go  start_server.sh  types.go  workflow.go
capability/: capability.go  capability_matcher.go
core/: agent_orchestrator.go  agents.go  agents_loader.go  capability.go  capability_matcher.go  executor.go  metrics.go  pubsub.go  router.go  schema.go  types.go
definationloader/: agents.go  markdown_formatter.go
docs/: architecture.md
examples/: ASDL.md  agent.json  agent_rag.json  agent_with_workflow.json  agents.json  agents_full.json  agents_generated.json  readable_agents.md
examples/python_code_agent/: README.md  asdl_generator.py  code_agent.py  code_agent_v2.py  flight_agent.py  llm_client.py  main.py  manifest_generator.py  manifest_generator_md.py  md.py  models.py  pyproject.toml  rag_agent.py  twitter_agent.py
examples/python_code_agent/templates/: agent.html  agent_action.html  agents.html  chat_response.md  generate_response.md  sample_test.md
examples/python_code_agent/templates/js/components/: AgentDetail.js
hub/: README.md  def_version.go  memory_registry.go  server.go  sqlite_registry.go  types.go
metrics/: metrics.go
orchestrator/: orchestrator.go
resources/: internal-agents-pubsub.yaml
types/: agents.go  markdown.go  (+1 more)
(+37 files in other folders)
