[tool.poetry]
name = "python-code-agent"
version = "0.0.1"
description = "A PydanticAI Agent for Python code tasks"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.6"
pydantic = "^2.10.3"
uvicorn = "^0.32.1"
black = "^24.10.0"
pylint = "^3.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
